CVS code -
- General:
	- Miscellaneous comment fixes. (DLR)
	- Fix a few last instances of the current line number's being
	  saved as an int instead of a ssize_t.  Changes to
	  renumber_all(), renumber(), do_alt_speller(), and
	  backup_lines(). (DLR)
	- Reorder some functions for consistency. (DLR)
	- Rename variable open_files openfile, for consistency. (DLR)
	- Restructure things so that every file has its own
	  openfilestruct, and so that the values in it are used directly
	  instead of being periodically synced up with the globals.
	  Accordingly, remove the globals.  Changes to pretty much
	  every function.  Rename global_init() resize_init(), rename
	  add_open_file() make_new_buffer(), rename load_buffer()
	  open_buffer(), rename open_prevnext_file()
	  switch_to_prevnext_buffer(), rename open_prevfile_void()
	  switch_to_prev_buffer(), rename open_nextfile_void()
	  switch_to_next_buffer(), remove load_file(), and remove
	  load_open_file(). (DLR)
- global.c:
  shortcut_init()
	- Simplify wording of nano_gotoline_msg. (Jordi)
- nano.c:
  do_verbatim_input()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  do_next_word()
	- Rework to be more like do_prev_word(), to avoid a potential
	  problem if we start at the end of a line. (DLR)
  do_alt_speller()
	- If we can't invoke the spell checker, use sprintf() instead of
	  snprintf() to write the error string we return, as the one
	  formatted value is a simple string, and so altspell_error will
	  always be long enough to hold it.  Also remove unnecessary
	  initialization of altspell_error, refactor so that msglen is
	  no longer needed, and make the error message more similar to
	  what the internal spell checker returns under the same
	  circumstances. (DLR)
  do_justify()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  allow_pending_sigwinch()